k8s/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.4
          args: ["start-dev", "--import-realm"]
          volumeMounts:
            - name: realm-volume
              mountPath: /opt/keycloak/data/import
            - name: keycloak-data
              mountPath: /opt/keycloak/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: realm-volume
          configMap:
            name: keycloak-realm-config
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
